--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/X86HideInject/v16
+/.vs
+/X86HideInject/.vs/X86HideInject/v16
